--- a/iOS/ScreenShareSample/ScreenShareKitBundle/AnnotationEditTextViewController.xib
+++ b/iOS/ScreenShareSample/ScreenShareKitBundle/AnnotationEditTextViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ScreenShareEditTextViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AnnotationEditTextViewController">
             <connections>
                 <outlet property="changeFontButton" destination="qXU-n4-i6k" id="ORv-zk-LuL"/>
                 <outlet property="doneButton" destination="u3F-6T-qET" id="wuB-u6-NuQ"/>
@@ -57,11 +56,10 @@
                         <constraint firstItem="qXU-n4-i6k" firstAttribute="top" secondItem="8kT-ch-D2J" secondAttribute="top" constant="6" id="ucm-y0-fvh"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RFD-P5-hZZ">
-                    <rect key="frame" x="8" y="8" width="42" height="27"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RFD-P5-hZZ">
+                    <rect key="frame" x="8" y="8" width="27" height="27"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
-                    <state key="normal" title="Cancel">
+                    <state key="normal" image="whiteCross">
                         <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                     <connections>
@@ -82,4 +80,7 @@
             <nil key="simulatedStatusBarMetrics"/>
         </view>
     </objects>
+    <resources>
+        <image name="whiteCross" width="27" height="27"/>
+    </resources>
 </document>
