--- a/ios/TextChatAccPackKit/OTTextChatKitBundle/TextChatReceivedTableViewCell.xib
+++ b/ios/TextChatAccPackKit/OTTextChatKitBundle/TextChatReceivedTableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -74,10 +75,10 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="UserLetterLabel" destination="vB3-Fj-Kin" id="zgV-ue-4KG"/>
-                <outlet property="cornerUpLeft" destination="WT6-Jr-DsS" id="jzz-Qc-wV9"/>
+                <outlet property="userLetterLabel" destination="vB3-Fj-Kin" id="zgV-ue-4KG"/>
+                <outlet property="cornerUpLeftView" destination="WT6-Jr-DsS" id="jzz-Qc-wV9"/>
                 <outlet property="message" destination="hbu-Kn-Zb6" id="eVs-TL-zze"/>
-                <outlet property="time" destination="wtI-Gu-ipU" id="BqS-wQ-aWo"/>
+                <outlet property="userTimeLabel" destination="wtI-Gu-ipU" id="BqS-wQ-aWo"/>
                 <outlet property="userFirstLetter" destination="F2U-h0-jFC" id="NeC-Ww-ttJ"/>
             </connections>
             <point key="canvasLocation" x="263" y="349"/>
