--- a/ios/TextChatAccPackKit/OTTextChatKitBundle/TextChatSentTableViewCell.xib
+++ b/ios/TextChatAccPackKit/OTTextChatKitBundle/TextChatSentTableViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
@@ -74,10 +75,10 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="UserLetterLabel" destination="lZa-9K-vl9" id="7AH-Yt-RNC"/>
-                <outlet property="cornerUp" destination="f9g-Mz-ubs" id="ZX0-ck-Ttt"/>
+                <outlet property="userLetterLabel" destination="lZa-9K-vl9" id="7AH-Yt-RNC"/>
+                <outlet property="cornerUpRightView" destination="f9g-Mz-ubs" id="ZX0-ck-Ttt"/>
                 <outlet property="message" destination="5BW-h1-EHl" id="qQC-GE-gXm"/>
-                <outlet property="time" destination="rZH-nB-dQX" id="3IB-NM-EvD"/>
+                <outlet property="userTimeLabel" destination="rZH-nB-dQX" id="3IB-NM-EvD"/>
                 <outlet property="userFirstLetter" destination="eKA-KN-ulA" id="CKc-GW-AXE"/>
             </connections>
             <point key="canvasLocation" x="191.5" y="250"/>
